bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: type char
val message:char = ""
            ^